tests/checker/diagnostics/0534_modules_include_value_mismatch_10.ml
module type S_kappa = sig
  val x : int
end

module W : S_kappa = struct
  include struct
    let x = true
  end
end
